2006-09-09  Johannes Schmid  <jhs@gnome.org>

  * libanjuta/plugins.c:
  Fixed #355156 (Show plugins in alphabetical order)

2006-09-09  Johannes Schmid  <jhs@gnome.org>

  * plugins/project-manager/plugin.c:
  Fixed #355148 (Show project name in title bar)

2006-09-09  Johannes Schmid  <jhs@gnome.org>

  * plugins/project-manager/plugin.c:
  (value_removed_project_root_uri):
  Fixed crasher if project cannot be opened

2006-08-30 Naba Kumar  <naba@gnome.org>

	* plugins/language-support-cpp-java/plugin.[c,h],
	plugins/language-support-cpp-java/anjuta-language-support-cpp-java.ui:
	Impletemnted UI for auto indent.
	
2006-08-28 Naba Kumar  <naba@gnome.org>
	
	* plugins/gvim/.cvsignore,
	plugins/gvim/Makefile.am,
	plugins/gvim/anjuta-vim-plugin.png,
	plugins/gvim/anjuta-vim.c,
	plugins/gvim/anjuta-vim.h,
	plugins/gvim/anjuta-vim.plugin.in,
	plugins/gvim/gtkvim.c,
	plugins/gvim/gtkvim.h,
	plugins/gvim/plugin.c,
	plugins/gvim/plugin.h: Added gvim anjuta plugin. Not included
	in build yet.

2006-08-28 Naba Kumar  <naba@gnome.org>

	Patch from: Massimo Corà  <maxcvs@email.it>
	* tagmanager/tm_source_file.c, tagmanager/tm_workspace.c: Fixed
	possible infinite loop.

2006-08-22 Adam Dingle <adam@medovina.org>
	
	* plugins/editor/editor.glade: Fixed bug 346775 ("no highlight styles
	to edit are shown in the preferences dialog in anjuta").
	Removed unused widgets from the style editor dialog.

2006-08-21  Johannes Schmid <jhs@gnome.org>

	* plugins/symbol-browser/test-class.[cpp/h]
	Added missing files

2006-08-18  Naba Kumar  <naba@gnome.org>

	* plugins/sourceview/sourceview.c: Emit language-changed signal at the
	end of document loading.

	* plugins/language-support-cpp-java/plugin.c,
	plugins/sourceview/sourceview.c: Fixed plugin loading.

2006-08-17  Naba Kumar  <naba@gnome.org>

	* plugins/language-support-cpp-java/plugin.c,
	plugins/language-support-cpp-java/plugin.h: Implemented emacs-style
	mode line parsing. Indentation parameters initialized based on