@@ -3,4 +3,5 @@ _Name=Gdb
 _Description=Gdb plugin.
 Location=anjuta-gdb:GdbPlugin
 Icon=anjuta-gdb.plugin.png
+UserActivatable=no
 Interfaces=IAnjutaDebugger,IAnjutaCpuDebugger
